[gd_scene load_steps=10 format=3 uid="uid://bkqv4ff16jo6u"]

[ext_resource type="Texture2D" uid="uid://byfs85ws3xdmn" path="res://resources/BG.png" id="1_37jlj"]
[ext_resource type="Script" path="res://main scene/MainScene.gd" id="1_uu0e3"]
[ext_resource type="PackedScene" uid="uid://c4gg0fe78alrh" path="res://bubbles_value/bubbles_value.tscn" id="3_n88jn"]
[ext_resource type="PackedScene" uid="uid://dcutlmkrvqrvc" path="res://ui_shop/ui_shop.tscn" id="4_2e61i"]
[ext_resource type="Script" path="res://main scene/FumesKillzone.gd" id="5_4l0lf"]
[ext_resource type="Texture2D" uid="uid://oc1o2vs1jery" path="res://resources/BGsmoke_1.png" id="5_io0ji"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f88cq"]
size = Vector2(82, 313)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_so2dy"]
size = Vector2(526, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyfea"]
size = Vector2(480, 151)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uu0e3")

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("1_37jlj")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="killzoneTioLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzoneTioLeft"]
position = Vector2(-305, 1)
shape = SubResource("RectangleShape2D_f88cq")

[node name="killzoneTioRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzoneTioRight"]
position = Vector2(305, 0)
shape = SubResource("RectangleShape2D_f88cq")

[node name="killzoneBubbleTop" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzoneBubbleTop"]
position = Vector2(0, -180)
shape = SubResource("RectangleShape2D_so2dy")

[node name="BubblesCount" parent="." groups=["BubblesCount"] instance=ExtResource("3_n88jn")]
z_index = 5
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_top = -136.0
offset_bottom = -136.0
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="UiShop" parent="." instance=ExtResource("4_2e61i")]
anchors_preset = -1
anchor_right = 0.75
anchor_bottom = 0.0
offset_left = -240.0
offset_top = -135.0
offset_right = 240.0
offset_bottom = 135.0

[node name="FumesKillzone" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 6
script = ExtResource("5_4l0lf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FumesKillzone"]
position = Vector2(0, -59.5)
shape = SubResource("RectangleShape2D_fyfea")

[node name="fumeSprite" type="Sprite2D" parent="FumesKillzone"]
modulate = Color(0.85, 1, 0, 0.678431)
texture = ExtResource("5_io0ji")

[node name="fumeSpriteShifted" type="Sprite2D" parent="FumesKillzone"]
modulate = Color(0.85098, 1, 0, 0.678431)
position = Vector2(480, 0)
texture = ExtResource("5_io0ji")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="killzoneTioLeft" to="." method="_on_killzone_tio_left_body_entered"]
[connection signal="body_entered" from="killzoneTioRight" to="." method="_on_killzone_tio_right_body_entered"]
[connection signal="body_entered" from="killzoneBubbleTop" to="." method="_on_killzone_bubble_top_body_entered"]
[connection signal="body_entered" from="FumesKillzone" to="FumesKillzone" method="_on_body_entered"]
